# krylov-method

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  buildnrun.sh
src/: krylov.mpp  main.cpp  math.mpp  muller.mpp  types.mpp
